@@ -1,3 +1,6 @@
+2016-01-30 Loic Valery <lvalery@cern.ch>
+     	* Fix bug in ranking plot in TtHFit.C
+
 2016-01-27 John Keller <jkeller@cern.ch>
 	* Adding New AutoBin algorithm "Transform J"
 	* Modify Auto-binning to be compatible with HIST input
